Added welcome banner component with custom styles for the list of services and invitation paragraph

--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -8,3 +8,5 @@
 @import './globals';
 //*> Shared Components Styles
 @import './components/shared/navbar';
+//*> Pages Components Styles
+@import './components/home/welcomeBanner';
