The variables of the styles of animations, colors, shadows and fonts were updated in addition to enhancing the styles of the WelcomeBanner component

--- a/ui/scss/variables/_colors.scss
+++ b/ui/scss/variables/_colors.scss
@@ -1,7 +1,7 @@
 $purple-ultra-dark: #1a1a2a;
 $purple-very-dark: lighten(#1a1a2a80, 5);
 $purple-dark: darken(#3c2c5080, 5);
-$title: #90709e;
-$text: #b6a3c0;
-$color-white: #fafafa;
-$shadow: #1b05274d;
+$text-purple: #90709e;
+$text-purple-light: #b6a3c0;
+$text-white: #fafafa;
+$shadow: #1b0527;
