--- a/ui/scss/components/home/_welcomeBanner.scss
+++ b/ui/scss/components/home/_welcomeBanner.scss
@@ -4,6 +4,7 @@
  background-position: center;
  position: relative;
  padding: $pad-double;
+ padding-top: $pad-fourth;
  width: 100%;
 
  &::before {
@@ -24,7 +25,6 @@
    background-color: rgba($purple-dark, 0.45);
    backdrop-filter: blur(5px);
    border-radius: 5px;
-   margin: 0 auto;
    position: relative;
    padding: $pad-half;
    width: 100%;
@@ -32,6 +32,11 @@
 
    h1 {
     margin-top: 0;
+    text-shadow: $shadow-white;
+
+    span {
+     text-shadow: $shadow-purple;
+    }
    }
 
    h1,
@@ -48,13 +53,13 @@
     margin-bottom: $mrg-half;
 
     li {
-     color: $text;
+     color: $text-purple-light;
      font-size: toRem(0.95);
      font-weight: 400;
      margin-bottom: $mrg-quarter;
 
      span {
-      color: $color-white;
+      color: $text-white;
       font-weight: 500;
      }
     }
@@ -75,5 +80,6 @@
  }
  @media (max-width: 990px) {
   padding: $pad-onehalf $pad-quarter;
+  padding-top: $pad-fourth;
  }
 }
