--- a/ui/scss/components/shared/_navbar.scss
+++ b/ui/scss/components/shared/_navbar.scss
@@ -43,12 +43,11 @@ header {
 
  .navbar {
   align-items: center;
-  backdrop-filter: blur(15px);
-  background-color: $purple-dark;
+  background-color: transparent;
   display: flex;
-  height: 60px;
+  height: toRem(4);
   justify-content: space-between;
-  position: relative;
+  position: absolute;
   transition: $transition-primary;
   width: 100%;
   z-index: 100;
@@ -56,19 +55,41 @@ header {
   .logo {
    margin-left: $mrg-quarter;
 
-   h3 {
-    margin: 0;
+   a {
+    transition: $transition-secondary;
+
+    h3 {
+     margin: 0;
+     transition: $transition-secondary;
+     user-select: none;
+
+     span {
+      transition: $transition-secondary;
+     }
+
+     @media (max-width: 1200px) {
+      font-size: toRem(1.6);
+     }
+
+     @media (max-width: 600px) {
+      font-size: toRem(1.3);
+     }
+    }
+
+    &:hover {
+     opacity: 0.6;
+    }
    }
   }
 
-  .bars {
+  .bars-menu {
    cursor: pointer;
    display: none;
    margin-right: $mrg-quarter;
    transition: $transition-tertiary;
 
-   .bar {
-    background-color: $text;
+   .single-bar {
+    background-color: $text-purple-light;
     border-radius: 5px;
     height: 4px;
     transition: $transition-tertiary;
@@ -83,8 +104,8 @@ header {
     }
    }
 
-   &.active {
-    .bar {
+   &.bars-menu_open {
+    .single-bar {
      &:nth-child(1) {
       height: 0;
       margin-bottom: 0;
@@ -103,8 +124,8 @@ header {
    }
 
    &:hover {
-    .bar {
-     background-color: $title;
+    .single-bar {
+     background-color: $text-purple;
     }
    }
 
@@ -116,18 +137,19 @@ header {
   .navigation {
    display: flex;
    margin-right: $mrg-quarter;
+   transition: $transition-secondary;
 
    a {
     border-radius: 5px;
-    color: $text;
+    color: $text-white;
     font-size: toRem(0.95);
     margin-right: $mrg-double;
     padding: $pad-min $pad-quarter;
     transition: $transition-secondary;
 
     &:hover {
-     box-shadow: 0px 2px 0px rgba($title, 0.5);
-     color: $title;
+     box-shadow: 0px 2px 0px rgba($text-purple, 0.5);
+     color: $text-purple;
     }
 
     &:last-child {
@@ -136,14 +158,15 @@ header {
    }
 
    @media (max-width: 990px) {
-    @include scaleXY-out;
+    @include hide-navigation-mobile;
     align-items: center;
     background-color: rgba($purple-dark, 0.96);
     flex-direction: column;
     justify-content: center;
+    margin-right: 0;
     position: absolute;
     padding: $pad-half 0;
-    top: 60px;
+    top: toRem(4);
     width: 100%;
 
     a {
@@ -156,17 +179,57 @@ header {
      }
     }
 
-    &.active {
-     @include scaleXY-in;
+    &.show-navigation {
+     @include show-navigation-mobile;
     }
    }
   }
 
   &.to-fixed {
+   background-color: $purple-dark;
+   backdrop-filter: blur(20px);
    box-shadow: $shadow-navbar;
+   height: toRem(3);
    left: 0;
    position: fixed;
    top: 0;
+
+   .logo {
+    a {
+     h3 {
+      text-shadow: $shadow-white;
+
+      span {
+       text-shadow: $shadow-purple;
+      }
+     }
+
+     @media (max-width: 1023px) {
+      h3 {
+       text-shadow: $shadow-white-light;
+
+       span {
+        text-shadow: $shadow-purple-light;
+       }
+      }
+     }
+    }
+   }
+
+   .navigation {
+    a {
+     text-shadow: $shadow-white-light;
+
+     &:hover {
+      text-shadow: $shadow-purple-light;
+     }
+    }
+
+    @media (max-width: 990px) {
+     box-shadow: $shadow-navigation;
+     top: toRem(3);
+    }
+   }
   }
  }
 }
