Implemented the AboutUs component on the homepage, including its design and styles

--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -10,3 +10,4 @@
 @import './components/shared/navbar';
 //*> Pages Components Styles
 @import './components/home/welcomeBanner';
+@import './components/home/aboutUs';
