--- a/ui/scss/_globals.scss
+++ b/ui/scss/_globals.scss
@@ -4,7 +4,7 @@
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
- scroll-margin-top: $mrg-fifthe;
+ scroll-margin-top: $mrg-fourth;
  text-decoration: none;
 }
 
