--- a/ui/scss/variables/_colors.scss
+++ b/ui/scss/variables/_colors.scss
@@ -1,5 +1,5 @@
 $purple-ultra-dark: #1a1a2a;
-$purple-very-dark: lighten(#1a1a2a80, 5);
+$purple-very-dark: lighten(#1a1a2a, 3);
 $purple-dark: darken(#3c2c5080, 5);
 $text-purple: #90709e;
 $text-purple-light: #b6a3c0;
