--- a/ui/scss/components/shared/_navbar.scss
+++ b/ui/scss/components/shared/_navbar.scss
@@ -2,13 +2,13 @@ header {
  position: relative;
  width: 100%;
 
- .advertising-banne {
+ .advertising-banner {
   height: 350px;
   position: relative;
   padding: $pad-quarter;
   width: 100%;
 
-  .welcome-text {
+  .name-slogan {
    background-color: $purple-very-dark;
    border-radius: 5px;
    bottom: toRem(1);
@@ -18,7 +18,7 @@ header {
    padding: $pad-quarter;
    transform: translateX(-50%);
    text-align: center;
-   width: 70%;
+   width: 75%;
 
    h2 {
     margin-top: 0;
