Created About Us page and AboutUsOverview component with its styles
This component includes the introduction to the About Us page, setting the foundation for the content on this page.

--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -1,13 +1,16 @@
+//*> Styling Variables
 @import './variables/colors';
 @import './variables/functions';
 @import './variables/box';
 @import './variables/fonts';
 @import './variables/shadow';
 @import './variables/animations';
-//*> Global Styles
+//*> These Styles Apply Globally To The Entire Project
 @import './globals';
-//*> Shared Components Styles
+//*> Shared Component Styles Of The Project
 @import './components/shared/navbar';
-//*> Pages Components Styles
+//*> Component Styles Of The Home Page
 @import './components/home/welcomeBanner';
 @import './components/home/introAboutUs';
+//*> Component Styles Of The About Us Page
+@import './components/aboutUs/aboutUsOverview';
