Added a Component and styles for project details to the About Us page

--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -14,3 +14,4 @@
 @import './components/home/introAboutUs';
 //*> Component Styles Of The About Us Page
 @import './components/aboutUs/aboutUsOverview';
+@import './components/aboutUs/aboutUsDetails';
