--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -15,3 +15,4 @@
 //*> Component Styles Of The About Us Page
 @import './components/aboutUs/aboutUsOverview';
 @import './components/aboutUs/aboutUsDetails';
+@import './components/aboutUs/meetOurExpertTeam';
