Created a Separate Component for the Header Banner

--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -9,6 +9,7 @@
 @import './globals';
 //*> Shared Component Styles Of The Project
 @import './components/shared/navbar';
+@import './components/shared/adBanner';
 //*> Component Styles Of The Home Page
 @import './components/home/welcomeBanner';
 @import './components/home/introAboutUs';
