Implemented Services Section on the Home Page with Custom Styling

--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -13,6 +13,8 @@
 //*> Component Styles Of The Home Page
 @import './components/home/welcomeBanner';
 @import './components/home/introAboutUs';
+@import './components/home/services';
+@import './components/home/singleCard';
 //*> Component Styles Of The About Us Page
 @import './components/aboutUs/aboutUsOverview';
 @import './components/aboutUs/aboutUsDetails';
