--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -15,6 +15,8 @@
 @import './components/home/introAboutUs';
 @import './components/home/services';
 @import './components/home/singleCard';
+@import './components/home/testimonials';
+@import './components/home/singleTestimonial';
 //*> Component Styles Of The About Us Page
 @import './components/aboutUs/aboutUsOverview';
 @import './components/aboutUs/aboutUsDetails';
