Implemented testimonial slider controls and automated transitioning functionality

--- a/ui/scss/components/home/_singleTestimonial.scss
+++ b/ui/scss/components/home/_singleTestimonial.scss
@@ -47,4 +47,12 @@
    margin: $mrg-half 0;
   }
  }
+
+ &.next-testimonial {
+  @include slider-next;
+ }
+
+ &.prev-testimonial {
+  @include slider-prev;
+ }
 }
