--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -17,6 +17,7 @@
 @import './components/home/singleCard';
 @import './components/home/testimonials';
 @import './components/home/singleTestimonial';
+@import './components/home/contact';
 //*> Component Styles Of The About Us Page
 @import './components/aboutUs/aboutUsOverview';
 @import './components/aboutUs/aboutUsDetails';
