Added footer section to the website, providing a cosmic touch to the overall design

--- a/ui/scss/styles.scss
+++ b/ui/scss/styles.scss
@@ -10,6 +10,7 @@
 //*> Shared Component Styles Of The Project
 @import './components/shared/navbar';
 @import './components/shared/adBanner';
+@import './components/shared/footer';
 //*> Component Styles Of The Home Page
 @import './components/home/welcomeBanner';
 @import './components/home/introAboutUs';
