--- a/ui/scss/components/home/_singleTestimonial.scss
+++ b/ui/scss/components/home/_singleTestimonial.scss
@@ -1,5 +1,5 @@
 .testimonial {
- background-color: $purple-dark;
+ background-color: $purple-very-dark;
  display: flex;
  flex-direction: column;
  height: 100%;
